--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Teacher-Heiko/cnn-fashion/blob/main/CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "iQjHqsmTAVLU"
       },
       "source": [
@@ -39,7 +29,8 @@
         "import os\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
-        "from tensorflow import keras"
+        "from tensorflow import keras\n",
+        "import pandas as pd\n"
       ]
     },
     {
@@ -77,7 +68,7 @@
         "data_path = os.path.join(current_dir, \"data/mnist.npz\") \n",
         "\n",
         "# Get only training set\n",
-        "(training_images, training_labels), _ = tf.keras.datasets.mnist.load_data(path=data_path) "
+        "(training_images, training_labels),_ = tf.keras.datasets.fashion_mnist.load_data()"
       ]
     },
     {
@@ -116,12 +107,12 @@
         "def reshape_and_normalize(images):\n",
         "    \n",
         "    ### START CODE HERE\n",
-        "\n",
+        "    \n",
         "    # Reshape the images to add an extra dimension\n",
-        "    images = None\n",
+        "    images = np.reshape(images, (60000,28,28,1))\n",
         "    \n",
         "    # Normalize pixel values\n",
-        "    images = None\n",
+        "    images = images / 255.0\n",
         "    \n",
         "    ### END CODE HERE\n",
         "\n",
@@ -144,12 +135,28 @@
         "tags": [
           "graded"
         ],
-        "id": "1YbKJcIpYZgv"
+        "id": "1YbKJcIpYZgv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49836b22-8f1f-4032-8cd1-5a6439525f94"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maximum pixel value after normalization: 1.0\n",
+            "\n",
+            "Shape of training set after reshaping: (60000, 28, 28, 1)\n",
+            "\n",
+            "Shape of one image after reshaping: (28, 28, 1)\n"
+          ]
+        }
+      ],
       "source": [
         "# Reload the images in case you run this cell multiple times\n",
-        "(training_images, _), _ = tf.keras.datasets.mnist.load_data(path=data_path) \n",
+        "(training_images, _), _ = tf.keras.datasets.fashion_mnist.load_data()\n",
         "\n",
         "# Apply your function\n",
         "training_images = reshape_and_normalize(training_images)\n",
@@ -201,8 +208,11 @@
         "### START CODE HERE\n",
         "\n",
         "# Remember to inherit from the correct class\n",
-        "class myCallback():\n",
+        "class myCallback(keras.callbacks.Callback):\n",
         "    # Define the method that checks the accuracy at the end of each epoch\n",
+        "    def on_epochs_end(self, epochs, logs={}):\n",
+        "      if (logs.get('accuracy')>0.995):\n",
+        "        self.model.stop_training = True\n",
         "    pass\n",
         "\n",
         "### END CODE HERE\n"
@@ -237,22 +247,27 @@
       },
       "outputs": [],
       "source": [
+        "from tensorflow.python import metrics\n",
         "# GRADED FUNCTION: convolutional_model\n",
         "def convolutional_model():\n",
         "    ### START CODE HERE\n",
         "\n",
         "    # Define the model\n",
         "    model = tf.keras.models.Sequential([ \n",
-        "      None,\n",
+        "      tf.keras.layers.Conv2D(32, (3,3), activation='relu', input_shape=(28,28,1)),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "      tf.keras.layers.Conv2D(48, (3,3), activation='relu'),\n",
+        "      tf.keras.layers.Flatten(),\n",
+        "      tf.keras.layers.Dense(128, activation='relu'),\n",
+        "      tf.keras.layers.Dense(10, activation='softmax')\n",
+        "     \n",
         "    ]) \n",
         "\n",
         "    ### END CODE HERE\n",
         "\n",
         "    # Compile the model\n",
-        "    model.compile(optimizer='adam', \n",
-        "                  loss='sparse_categorical_crossentropy', \n",
-        "                  metrics=['accuracy']) \n",
-        "        \n",
+        "    model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+        "                  \n",
         "    return model"
       ]
     },
@@ -263,19 +278,55 @@
         "tags": [
           "graded"
         ],
-        "id": "OKn2_KnVYZgx"
+        "id": "OKn2_KnVYZgx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7bcffa6c-8753-4686-b879-146a3a9eace8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "1875/1875 [==============================] - 63s 34ms/step - loss: 0.3881 - accuracy: 0.8606\n",
+            "Epoch 2/10\n",
+            "1875/1875 [==============================] - 64s 34ms/step - loss: 0.2563 - accuracy: 0.9049\n",
+            "Epoch 3/10\n",
+            "1875/1875 [==============================] - 63s 34ms/step - loss: 0.2090 - accuracy: 0.9222\n",
+            "Epoch 4/10\n",
+            "1875/1875 [==============================] - 64s 34ms/step - loss: 0.1696 - accuracy: 0.9369\n",
+            "Epoch 5/10\n",
+            "1875/1875 [==============================] - 63s 33ms/step - loss: 0.1402 - accuracy: 0.9476\n",
+            "Epoch 6/10\n",
+            "1875/1875 [==============================] - 62s 33ms/step - loss: 0.1111 - accuracy: 0.9588\n",
+            "Epoch 7/10\n",
+            "1875/1875 [==============================] - 63s 34ms/step - loss: 0.0894 - accuracy: 0.9662\n",
+            "Epoch 8/10\n",
+            "1875/1875 [==============================] - 62s 33ms/step - loss: 0.0722 - accuracy: 0.9732\n",
+            "Epoch 9/10\n",
+            "1875/1875 [==============================] - 62s 33ms/step - loss: 0.0590 - accuracy: 0.9786\n",
+            "Epoch 10/10\n",
+            "1875/1875 [==============================] - 63s 34ms/step - loss: 0.0494 - accuracy: 0.9819\n"
+          ]
+        }
+      ],
       "source": [
         "# Save your untrained model\n",
         "model = convolutional_model()\n",
-        "\n",
         "# Instantiate the callback class\n",
         "callbacks = myCallback()\n",
-        "\n",
         "# Train your model (this can take up to 5 minutes)\n",
         "history = model.fit(training_images, training_labels, epochs=10, callbacks=[callbacks])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "aN1FfcwmnWKR"
+      }
     },
     {
       "cell_type": "markdown",
@@ -293,9 +344,26 @@
         "tags": [
           "graded"
         ],
-        "id": "AXQfnS7KYZgy"
+        "id": "AXQfnS7KYZgy",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 171
+        },
+        "outputId": "06c9810d-5ede-4db4-84bf-b64d781d4ca5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-040419122cb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Your model was trained for {len(history.epoch)} epochs\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'history' is not defined"
+          ]
+        }
+      ],
       "source": [
         "print(f\"Your model was trained for {len(history.epoch)} epochs\")"
       ]
@@ -315,9 +383,27 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gFqDu8nLYZgy"
+        "id": "gFqDu8nLYZgy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f89d7abb-ca80-4b89-e305-16591b43aace"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "   - A Conv2D layer with 32 filters, a kernel_size of 3x3, ReLU activation function and an input shape that matches that of every image in the training set\n",
+            "   - A MaxPooling2D layer with a pool_size of 2x2\n",
+            "   - A Flatten layer with no arguments\n",
+            "   - A Dense layer with 128 units and ReLU activation function\n",
+            "   - A Dense layer with 10 units and softmax activation function\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# WE STRONGLY RECOMMEND YOU TO TRY YOUR OWN ARCHITECTURES FIRST\n",
         "# AND ONLY RUN THIS CELL IF YOU WISH TO SEE AN ANSWER\n",
@@ -368,8 +454,7 @@
       "version": "3.8.8"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
